# ipaddr

./: .gitignore  CMakeLists.txt  README.md  THIRD_PARTY_LICENSES.md
docs/: Doxyfile
docs/sphinx/: conf.py  index.rst
docs/sphinx/api/: index.rst  ipv4.rst  ipv6.rst  module.rst
docs/sphinx/examples/: allow-check.rst  cidr-calc.rst  classify.rst  index.rst
docs/sphinx/getting-started/: installation.rst  quickstart.rst
docs/sphinx/guides/: bytes-to-address.rst  cidr-math.rst  index.rst  ipv6-normalize.rst  validate-input.rst  zone-id.rst
docs/sphinx/tutorials/: allow-list.rst  index.rst  ipv4-mapped.rst  named-subnets.rst
examples/: allow_check.cpp  cidr_calc.cpp  classify.cpp
include/polycpp/ipaddr/: ipaddr.hpp
include/polycpp/ipaddr/detail/: aggregator.hpp  helpers.hpp  ipv4_impl.hpp  ipv6_impl.hpp  module_impl.hpp
src/: ipaddr.cpp
tests/: test_ipaddr.cpp
